add render time

--- a/example/index.html
+++ b/example/index.html
@@ -15,7 +15,7 @@
         <small class="digest">${digest}</small>
       </a>
     </div>
-    <script src="./bundle.js"></script> 
+    <script src="./app.bundle.js"></script> 
     <script type="text/javascript">
     $(function(){
       new App();
